# mid360_hikcamera_calibration

./: README.md  myRemoval.pcd
doc/img/: readme.txt
src/livox_hikcamera_cal/: CMakeLists.txt  package.xml
src/livox_hikcamera_cal/cfg/: CalibrationParam.cfg  OrthoFilter.cfg  PointcloudFilter.cfg  TransformFilter.cfg  calibration_param.yaml  camera_intrinsics.yaml  extrinsics.yaml  setup_aruco.yaml  setup_caliboard.yaml  setup_ros.yaml
src/livox_hikcamera_cal/data/: border_error_anaylysis.csv  point_set.csv
src/livox_hikcamera_cal/include/livox_hikcamera_cal/: CommandHandler.h  calibration_tool.h  conversion_bridge.h  corners_subscriber_publisher.h  dynamic_reconfigure.h  file_operator.h  recorder.h  rviz_drawing.h
src/livox_hikcamera_cal/include/livox_hikcamera_cal/image_opr/: aruco_tool.h  drawing_tool.h  image_process.h  image_subscriber_publisher.h
src/livox_hikcamera_cal/include/livox_hikcamera_cal/pointcloud2_opr/: dynamic_reconfigure.h  pcd_saver.h  point_cloud_process.h  point_cloud_subscriber_publisher.h  rviz_drawing_3d.h
src/livox_hikcamera_cal/launch/: aruco_video_ext_calib.launch  camera_color_fusion_point_cloud.launch  controller_menu.launch  lidar_camera_calibration.launch
src/livox_hikcamera_cal/lib/: CommandHandler.cpp  calibration_solver.cpp  calibration_tool.cpp  calibration_tool.tpp  conversion_bridge.cpp  corners_subscriber_publisher.cpp  dynamic_reconfigure.cpp  file_operator.cpp  point_cloud_process.cpp  recorder.cpp  rviz_drawing.cpp
src/livox_hikcamera_cal/lib/image_opr/: aruco_tool.cpp  drawing_tool.cpp  image_process.cpp  image_subscriber_publisher.cpp
src/livox_hikcamera_cal/lib/pointcloud2_opr/: pcd_saver.cpp  point_cloud_process.cpp  point_cloud_process.tpp  point_cloud_subscriber_publisher.cpp  rviz_drawing_3d.cpp
src/livox_hikcamera_cal/pcd/: 20240509061325.pcd  20240509061326.pcd  20240509061328.pcd  20240509061333.pcd  20240509061346.pcd  20240509061358.pcd
src/livox_hikcamera_cal/rqt_config/: cfg1.yaml
src/livox_hikcamera_cal/rviz/: calibration.rviz  hpmap.rviz  velodyne.rviz
src/livox_hikcamera_cal/src/: aruco_detection_example.cpp  caliboard_cloud_detection.cpp  caliboard_cloud_detection_dynamic.cpp  calibration_node.cpp  camera_color_fusion_point_cloud.cpp  control_menu.cpp  controller_menu.cpp  image_process_node.cpp  lidar_camera_calibration.cpp  pcd_saver_example.cpp  point_cloud_filter.cpp  pointcloud_process_node.cpp  rosbag_record_example.cpp  test_outer.cpp  test_outer2.cpp
src/livox_hikcamera_cal/src/demo/: aruco_detection_example.cpp  caliboard_cloud_detection.cpp  caliboard_cloud_detection_dynamic.cpp  lidar_camera_calibration.cpp  pcd_saver_example.cpp  point_cloud_filter.cpp  pointcloud_meshing.cpp  rosbag_record_example.cpp  test.cpp  test_outer.cpp  test_outer2.cpp
src/livox_pointcloud2_opr/: CMakeLists.txt  package.xml
src/livox_pointcloud2_opr/cfg/: PointcloudFilter.cfg
src/livox_pointcloud2_opr/include/: dynamic_reconfigure.h  pc2_sub_pub.h  point_cloud_process.h  rectangular_plane_fitting.h
src/livox_pointcloud2_opr/include/livox_pc2_opr/: dynamic_reconfigure.h  pcd_saver.h  point_cloud_process.h  point_cloud_subscriber_publisher.h  recorder.h
src/livox_pointcloud2_opr/lib/: dynamic_reconfigure.cpp  livox_pointcloud2_tool.cpp  pcd_saver.cpp  point_cloud_process.cpp  point_cloud_subscriber_publisher.cpp  recorder.cpp  rectangular_plane_fitting.cpp
src/livox_pointcloud2_opr/pcd/: 20240509061322.pcd  20240509061323.pcd  20240509061325.pcd  20240509061326.pcd  20240509061327.pcd  20240509061328.pcd  20240509061331.pcd  20240509061332.pcd  20240509061333.pcd  20240509061334.pcd  20240509061335.pcd  20240509061336.pcd  20240509061337.pcd  20240509061338.pcd  20240509061340.pcd  20240509061349.pcd  20240509061350.pcd  20240509061351.pcd  20240509061354.pcd
src/livox_pointcloud2_opr/src/: caliboard_cloud_detection.cpp  plane_gain.cpp  point_cloud_filter.cpp  rosbag_record_example.cpp  test.cpp  test111.cpp  test_outer.cpp  test_outer1.cpp  test_outer2.cpp
src/mid360_ros_driver/: CMakeLists.txt  package.xml
